# gvu

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
include/gvu/: DescriptorSetUpdater.h  GraphicsPipelineCreateInfo.h  Helpers.h  SPIRV_DescriptorSetLayoutGenerator.h  spirvPipelineReflector.h
include/gvu/Advanced/: GLSLCompiler.h  ImageArrayManager.h  ImageArrayManager2.h  Pipeline.h  VulkanApplicationContext.h
include/gvu/Cache/: Cache_t.h  DescriptorSetLayoutCache.h  Objects.h  PipelineLayoutCache.h  RenderPassCache.h  TextureCache.h
include/gvu/Containers/: BufferMap.h  TextureMap.h
include/gvu/Core/: DescriptorSetUpdater.h  DynamicRenderingFrameBuffer.h  FormatInfo.h  GraphicsPipelineCreateInfo.h  Helpers.h
include/gvu/Core/Cache/: Cache_t.h  DescriptorSetLayoutCache.h  Objects.h  SamplerCache.h  TextureCache.h
include/gvu/Core/Managers/: CommandPoolManager.h  DescriptorPoolManager.h  SubBufferManager.h
include/gvu/Extension/: ImGuiWidgets.h  spirvPipelineReflector.h
include/gvu/Managers/: CommandPoolManager.h  DescriptorPoolManager.h
test/: CMakeLists.txt  unit-BufferContainers.cpp  unit-DescriptorPoolManager.cpp  unit-DescriptorSetLayoutCache.cpp  unit-GLSLCompiler.cpp  unit-GraphicsPipeline.cpp  unit-GraphicsPipelineCreateInfo-DynamicRendering.cpp  unit-GraphicsPipelineCreateInfo.cpp  unit-GvuContext.cpp  unit-MemoryCache.cpp  unit-MemoryManager.cpp  unit-PipelineLayoutCache.cpp  unit-PipelineLayoutGenerator.cpp  unit-RenderPassCache.cpp  unit-SamplerCache.cpp  unit-SubBufferManager.cpp  unit-TexureMap.cpp  unit_helpers.h
